#--------------------------------------------------------------------------
# File and Version Information:
#  $Id:$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V01-00-39
2018-10-15 Mikhail S. Dubrovin
- src/GlobalUtils.py - add EPIX10KA2M

Tag: V01-00-38
2018-09-26 Mikhail S. Dubrovin
- uxi and pixis turn off common mode correction in default parameters
	modified:   src/CalibParsBaseCameraV1.py
	modified:   src/CalibParsBaseUxiV1.py

Tag: V01-00-37
2018-09-25 Mikhail S. Dubrovin
- add uxi and pixis
	new file:   src/CalibParsBaseUxiV1.py
	modified:   src/CalibParsStore.py
	modified:   src/GlobalUtils.py

Tag: V01-00-36 - Dan???

Tag: V01-00-35
2018-07-05 Mikhail S. Dubrovin
- add support for epix10ka in calib directory
	modified:   src/CalibParsBaseEpix10kaV1.py
	modified:   src/CalibParsBasePnccdV1.py
	modified:   src/GlobalUtils.py

Tag: V01-00-34
2018-05-07 Mikhail S. Dubrovin
- add support for jungfrau Id in access constants from repository hdf5 calib file
	modified:   src/DCDetectorId.py
	modified:   src/DCFileName.py

Tag: V01-00-33
2018-05-04 Mikhail S. Dubrovin
- GlobalUtils.create_path - hide print under verbos

Tag: V01-00-32
2018-04-19 Mikhail S. Dubrovin
- add a few methods in GlobalUtils

Tag: V01-00-31
2018-02-27 Mikhail S. Dubrovin
- add protection for parameters of DCMethods, DCRange, DCType

Tag: V01-00-30
2017-12-15 Mikhail S. Dubrovin
- add src/GlobalUtils.calib_dir_for_exp

Tag: V01-00-29
2017-12-07 Mikhail S. Dubrovin
- add support for Epix10ka calibration constants
	modified:   src/CalibParsStore.py
	modified:   src/GlobalUtils.py
        src/CalibParsBaseEpix10kaV1.py

Tag: V01-00-28
2017-12-06 Mikhail S. Dubrovin
- src/GlobalUtils.py - add support for epix10ka

2017-12-04 Mikhail S. Dubrovin