@@ -30,8 +30,8 @@ Author: Mikhail Dubrovin
 
 class CalibParsBaseEpix10kaV1 :
 
-    ndim = 4 # (7, 1, 352, 384)
-    segs = 1 
+    ndim = 4 # constants_shape = (7, 1, 352, 384) # data_shape = (16, 352, 384)
+    segs = 1
     rows = 0 # 352->0 variable size array due to variable number of panels
     cols = 0 # 384 
     size = segs*rows*cols
